# MandelbrotSSE

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.emscripten  Makefile.in  NEWS  README  README.md  acinclude.m4  aclocal.m4  configure  configure.ac
ac-macros/: revision_utils.m4
scaling_data/: README.md  log.txt  log2.txt  scaling.py
src/: Makefile.am  Makefile.in  common.c  common.cc  common.h  config.h.in  mandel.c  mandel.cc  sse.c  sse.cc  sse.h  version.h.in  xaos.c  xaos.cc  xaos.h
